fix height issue. replaced ascpect ratio for browser support. secondary font added. new text. added double border

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
+:root {
+  --color-black: #171717;
+  --color-white: #fcfcfc;
+  --font-family-primary: "Poiret One", cursive;
+  --font-family-secondary: "Open Sans", sans-serif;
+}
+
 body {
   margin: 0;
-  height: 100vh;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("background-portrait.jpg");
+  background-image: url("background-landscape.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-@media (min-width: 640px) {
-  body {
-    background-image: url("background-landscape.jpg");
-  }
+  background-position: center center;
+  background-attachment: fixed;
+  color: var(--color-black);
 }
 
 .gridContainer {
@@ -22,7 +25,7 @@ body {
   grid-template-rows: 2rem auto 2rem;
   align-content: center;
   max-width: 320px;
-  height: 100%;
+  min-height: 100vh;
   margin: 0 auto;
 }
 
@@ -44,21 +47,19 @@ body {
   }
 }
 
-@media (min-width: 720px) {
+@media (min-width: 768px) {
   .gridContainer {
-    max-width: 720px;
+    max-width: 768px;
   }
 }
 
 .contentContainer {
   grid-row: 2;
-  background-color: #ffffff;
-  padding: 1.5rem 1rem;
+  background-color: var(--color-white);
+  padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  border: 1px solid #cecece;
-  border-radius: 8px;
   margin: 0 1rem;
 }
 
@@ -68,8 +69,50 @@ body {
   }
 }
 
+.secondBorder {
+  border-color: #b79c0f;
+  border-style: double;
+  padding: 1rem;
+}
+
+@media (min-width: 640px) {
+  .secondBorder {
+    padding: 1.5rem;
+  }
+}
+
 .iframeContainer {
-  aspect-ratio: 16/9;
+  height: 126px;
+  width: 218px;
+  margin: 0 auto 1rem;
+}
+
+@media (min-width: 375px) {
+  .iframeContainer {
+    width: 273px;
+    height: 157px;
+  }
+}
+
+@media (min-width: 480px) {
+  .iframeContainer {
+    width: 378px;
+    height: 216px;
+  }
+}
+
+@media (min-width: 640px) {
+  .iframeContainer {
+    width: 490px;
+    height: 279px;
+  }
+}
+
+@media (min-width: 720px) {
+  .iframeContainer {
+    width: 570px;
+    height: 324px;
+  }
 }
 
 .iframe {
@@ -81,21 +124,57 @@ body {
 
 .heading {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 24px;
   line-height: 1.3;
-  font-family: "Poiret One", cursive;
+  font-family: var(--font-family-primary);
   margin: 0 auto 1rem;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 375px) {
   .heading {
-    font-size: 2rem;
+    font-size: 32px;
+  }
+}
+
+@media (min-width: 768px) {
+  .heading {
+    font-size: 48px;
   }
 }
 
 .subHeading {
-  font-size: 12px;
-  line-height: 1.2;
+  font-family: var(--font-family-secondary);
+  font-size: 14px;
+  line-height: 1.5;
   text-align: center;
   margin-bottom: 1.5rem;
+}
+
+@media (min-width: 375px) {
+  .subHeading {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 768px) {
+  .subHeading {
+    margin-bottom: 2rem;
+  }
+}
+
+.printText {
+  font-family: var(--font-family-secondary);
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .printText {
+    font-size: 14px;
+  }
+}
+
+.link {
+  color: var(--color-black);
 }
